remove database address

--- a/DoctorsApp/appsettings.json
+++ b/DoctorsApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-AJGON69\\SQLEXPRESS;Database=DoctorWebAppDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=Your Database adress;Database=DoctorWebAppDb;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
